<resources>
    <string name="app_name">Tutonder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">REGISTRO DE USUARIOS</string>
    <string name="nombre_del_tutor">Nombre del Tutor</string>
    <string name="info">Info</string>
    <string name="todo">TODO</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usario">Usario</string>
    <string name="tutor">Tutor</string>
    <string name="ingresar">Ingresar</string>
<<<<<<< HEAD
    <string name="curso">Curso</string>
    <string name="guardar">Guardar</string>
=======
    <string name="informacion">Información</string>
    <string name="cursos">Cursos</string>
    <string name="carrera">Carrera</string>
    <string name="comentario">Comentario</string>
    <string name="contacto">Contacto</string>
>>>>>>> 56c25c0c730cefa87ca999c1e464325cfa705ebb
</resources>
