<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Tutor">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ImagenTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/NombreTutor"
            android:layout_width="199dp"
            android:layout_height="37dp"
            android:layout_marginTop="48dp"
            android:text="@string/nombre_del_tutor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toEndOf="@+id/ImagenTutor"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/InfoTutor"
            android:layout_width="194dp"
            android:layout_height="34dp"
            android:layout_marginTop="28dp"
            android:text="@string/info"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ImagenTutor"
            app:layout_constraintTop_toBottomOf="@+id/NombreTutor" />

        <RatingBar
            android:id="@+id/RateTutor"
            android:layout_width="245dp"
            android:layout_height="38dp"
            android:layout_marginBottom="484dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.837"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Informacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:text="@string/informacion"
            app:layout_constraintBottom_toTopOf="@+id/iNombreTutor1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RateTutor" />

        <TextView
            android:id="@+id/iNombreTutor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_tutor"
            app:layout_constraintBottom_toTopOf="@+id/iCarrerraTutor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/iCarrerraTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrera"
            app:layout_constraintBottom_toTopOf="@+id/iCursosDados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/iCursosDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cursos"
            app:layout_constraintBottom_toTopOf="@+id/iConctactoTutor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/iConctactoTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacto"
            app:layout_constraintBottom_toTopOf="@+id/Comentario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/comentario"
            app:layout_constraintBottom_toTopOf="@+id/CajaComentarios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.107"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/CajaComentarios"
            android:layout_width="350dp"
            android:layout_height="237dp"
            android:layout_marginBottom="68dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/BotonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TutorNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="           "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.133"
            app:layout_constraintStart_toEndOf="@+id/iNombreTutor1"
            app:layout_constraintTop_toBottomOf="@+id/RateTutor" />

        <TextView
            android:id="@+id/Carrera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="           "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.327"
            app:layout_constraintStart_toEndOf="@+id/iCarrerraTutor"
            app:layout_constraintTop_toBottomOf="@+id/TutorNombre" />

        <TextView
            android:id="@+id/Contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.277"
            app:layout_constraintStart_toEndOf="@+id/iConctactoTutor"
            app:layout_constraintTop_toBottomOf="@+id/Cursos" />

        <TextView
            android:id="@+id/Cursos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="     "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.309"
            app:layout_constraintStart_toEndOf="@+id/iCursosDados"
            app:layout_constraintTop_toBottomOf="@+id/Carrera" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>